# Algorithm

./: CMakeCache.txt  CMakeLists.txt  CONVERGENCE_GA_as-22july06.csv  CONVERGENCE_GA_power.csv  CONVERGENCE_GA_star2.csv  CONVERGENCE_ISING_as-22july06.csv  CONVERGENCE_ISING_power.csv  CONVERGENCE_ISING_star2.csv  Makefile  QRTD_GA_power.csv  QRTD_GA_star2.csv  QRTD_ISING_power.csv  QRTD_ISING_star2.csv  README.md  SQD_GA_power.csv  SQD_GA_star2.csv  SQD_ISING_power.csv  SQD_ISING_star2.csv  analysis.py  approxVertexCover.cpp  cmake_install.cmake  runApprox.cpp  runGA  runGA.cpp  runTests.py  sample  sample.cpp
data/: tiny.graph
output/Approx/: as-22july06_GA_160000_1.sol  delaunay_n10_GA_4000_1.sol  email_Approx_4000_1.sol  football_GA_1500_1.sol  hep-th_GA_40800_1.sol  jazz_GA_1500_1.sol  karate_GA_1500_1.sol  netscience_GA_4000_1.sol  power_GA_20000_1.sol  star2_GA_120000_1.sol  star_GA_80800_1.sol  tiny_Approx_20_1.sol
output/GA/: as-22july06_GA_160000_1773.sol  as-22july06_GA_160000_1773.trace  as-22july06_GA_160000_194.sol  as-22july06_GA_160000_194.trace  as-22july06_GA_160000_22.sol  as-22july06_GA_160000_22.trace  as-22july06_GA_160000_224.sol  as-22july06_GA_160000_224.trace  as-22july06_GA_160000_2356.sol  as-22july06_GA_160000_2356.trace  as-22july06_GA_160000_42.sol  as-22july06_GA_160000_42.trace  as-22july06_GA_160000_458.sol  as-22july06_GA_160000_458.trace  as-22july06_GA_160000_795.sol  as-22july06_GA_160000_795.trace  as-22july06_GA_160000_886.sol  as-22july06_GA_160000_886.trace  as-22july06_GA_160000_986.sol  as-22july06_GA_160000_986.trace  delaunay_n10_GA_4000_1773.sol  delaunay_n10_GA_4000_1773.trace  delaunay_n10_GA_4000_194.sol  delaunay_n10_GA_4000_194.trace  delaunay_n10_GA_4000_22.sol  delaunay_n10_GA_4000_22.trace  delaunay_n10_GA_4000_224.sol  delaunay_n10_GA_4000_224.trace  delaunay_n10_GA_4000_2356.sol  delaunay_n10_GA_4000_2356.trace  delaunay_n10_GA_4000_42.sol  delaunay_n10_GA_4000_42.trace  delaunay_n10_GA_4000_458.sol  delaunay_n10_GA_4000_458.trace  delaunay_n10_GA_4000_795.sol  delaunay_n10_GA_4000_795.trace  delaunay_n10_GA_4000_886.sol  delaunay_n10_GA_4000_886.trace  delaunay_n10_GA_4000_986.sol  delaunay_n10_GA_4000_986.trace  (+187 more)
output/ISING/: as-22july06_ISING_24000_1773.sol  as-22july06_ISING_24000_1773.trace  as-22july06_ISING_24000_194.sol  as-22july06_ISING_24000_194.trace  as-22july06_ISING_24000_22.sol  as-22july06_ISING_24000_22.trace  as-22july06_ISING_24000_224.sol  as-22july06_ISING_24000_224.trace  as-22july06_ISING_24000_2356.sol  as-22july06_ISING_24000_2356.trace  as-22july06_ISING_24000_42.sol  as-22july06_ISING_24000_42.trace  as-22july06_ISING_24000_458.sol  as-22july06_ISING_24000_458.trace  as-22july06_ISING_24000_795.sol  as-22july06_ISING_24000_795.trace  as-22july06_ISING_24000_886.sol  as-22july06_ISING_24000_886.trace  as-22july06_ISING_24000_986.sol  as-22july06_ISING_24000_986.trace  delaunay_n10_ISING_3000_1773.sol  delaunay_n10_ISING_3000_1773.trace  delaunay_n10_ISING_3000_194.sol  delaunay_n10_ISING_3000_194.trace  delaunay_n10_ISING_3000_22.sol  delaunay_n10_ISING_3000_22.trace  delaunay_n10_ISING_3000_224.sol  delaunay_n10_ISING_3000_224.trace  delaunay_n10_ISING_3000_2356.sol  delaunay_n10_ISING_3000_2356.trace  delaunay_n10_ISING_3000_42.sol  delaunay_n10_ISING_3000_42.trace  delaunay_n10_ISING_3000_458.sol  delaunay_n10_ISING_3000_458.trace  delaunay_n10_ISING_3000_795.sol  delaunay_n10_ISING_3000_795.trace  delaunay_n10_ISING_3000_886.sol  delaunay_n10_ISING_3000_886.trace  delaunay_n10_ISING_3000_986.sol  delaunay_n10_ISING_3000_986.trace  (+186 more)
src/: BranchAndBound.cpp  BranchAndBound.h  CMakeLists.txt  Chromosome.cpp  Chromosome.h  EdgeDenotedGraph.cpp  EdgeDenotedGraph.h  GeneticAlgoSearch.cpp  GeneticAlgoSearch.h  IsingMCAlgoSearch.cpp  IsingMCAlgoSearch.h  Makefile  Random.cpp  Random.h  RawMetisFile.cpp  RawMetisFile.h  Stopwatch.cpp  Stopwatch.h  Utilities.cpp  Utilities.h  cmake_install.cmake
